--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,28 @@
       </goals>
      </execution>
     </executions>
-   </plugin>
-  </plugins>
+ </plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+			<includes>
+                    <include>**/*Test.java</include>
+                </includes>
+          <systemPropertyVariables>
+            <property>
+              <name>username</name>
+              <value>${username}</value>
+            </property>
+        	<property>
+              <name>password</name>
+              <value>${password}</value>
+            </property>
+  
+		</systemPropertyVariables>
+        </configuration>
+      </plugin>
+</plugins>
  </build>
 </project>
