--- a/pom.xml
+++ b/pom.xml
@@ -48,19 +48,23 @@
    <scope>compile</scope>
   </dependency>
   <dependency>
-   <groupId>google</groupId>
-   <artifactId>collect</artifactId>
-   <version>1.0</version>
-   <type>jar</type>
-   <scope>compile</scope>
-  </dependency>
-  <dependency>
    <groupId>javax.annotation</groupId>
    <artifactId>jsr305</artifactId>
    <version>1.0</version>
    <type>jar</type>
    <scope>compile</scope>
   </dependency>
+  <dependency>
+	<groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+                <version>r05</version>
+        </dependency>
+  <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+                <version>1.0</version>
+        </dependency>
+  <dependency>
   <dependency>
    <groupId>log4j</groupId>
    <artifactId>log4j</artifactId>
